--- a/index.html
+++ b/index.html
@@ -12,6 +12,116 @@
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light m-0 p-0">
+            <div style="background-color: #F8F9FA;" class="container py-2">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="logo" width="159" height="28">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- header end -->
+
+    <main>
+        <!-- slider start -->
+        <section class="container px-0" style="margin: 100px auto;">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
+                            <div class="card-body ps-5" style="margin-top: 10%;">
+                                <h1 class="card-title">Mega LCD TV For Sports
+                                </h1>
+                                <p class="card-text">This is the best tv in the world for people who just want to waste
+                                    time in front of tv.</p>
+                                <h2 style="color:#FF136F" class="fs-1">$1200</h2>
+                                <a href="#" style="background-color: #FF136F;"
+                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
+                                    Now</a>
+                            </div>
+                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                                <img width="400" src="images/banner-images/tv.png" class="" alt="tv">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single carousel item -->
+                    <div class="carousel-item">
+                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
+                            <div class="card-body ps-5" style="margin-top: 10%;">
+                                <h1 class="card-title">Cool Dude Headphone
+                                </h1>
+                                <p class="card-text">This is the best tv in the world for people who just want to waste
+                                    time in front of tv.</p>
+                                <h2 style="color:#FF136F" class="fs-1">$400</h2>
+                                <a href="#" style="background-color: #FF136F;"
+                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
+                                    Now</a>
+                            </div>
+                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                                <img width="400" src="images/banner-images/headphone.png" class="" alt="headphone">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single carousel item -->
+                    <div class="carousel-item">
+                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
+                            <div class="card-body ps-5" style="margin-top: 10%;">
+                                <h1 class="card-title">X-Box for your living room</h1>
+                                <p class="card-text">This is the best tv in the world for people who just want to waste
+                                    time in front of tv.</p>
+                                <h2 style="color:#FF136F" class="fs-1">$600</h2>
+                                <a href="#" style="background-color: #FF136F;"
+                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
+                                    Now</a>
+                            </div>
+                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                                <img width="400" src="images/banner-images/xbox.png" class="" alt="xbox">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- single carousel item -->
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <!-- carousel control prev -->
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                <!-- carousel control next -->
+            </div>
+            <!-- carousel controls -->
+        </section>
+        <!-- slider end -->
+    </main>
+    <footer></footer>
 
 
 
