--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <!-- header start -->
     <header>
+        <!-- nav start -->
         <nav class="navbar navbar-expand-lg navbar-light m-0 p-0">
             <div style="background-color: #F8F9FA;" class="container py-2">
                 <a class="navbar-brand" href="#">
@@ -42,10 +43,8 @@
                 </div>
             </div>
         </nav>
-    </header>
-    <!-- header end -->
+        <!-- nav end -->
 
-    <main>
         <!-- slider start -->
         <section class="container px-0" style="margin: 100px auto;">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -120,6 +119,11 @@
             <!-- carousel controls -->
         </section>
         <!-- slider end -->
+    </header>
+    <!-- header end -->
+
+    <main>
+
     </main>
     <footer></footer>
 
