--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
-                            <div class="card-body ps-5" style="margin-top: 10%;">
+                        <div class="row" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">Mega LCD TV For Sports
                                 </h1>
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
@@ -61,15 +61,15 @@
                                     class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
                                     Now</a>
                             </div>
-                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                            <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/tv.png" class="" alt="tv">
                             </div>
                         </div>
                     </div>
                     <!-- single carousel item -->
                     <div class="carousel-item">
-                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
-                            <div class="card-body ps-5" style="margin-top: 10%;">
+                        <div class="row" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">Cool Dude Headphone
                                 </h1>
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
@@ -79,15 +79,15 @@
                                     class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
                                     Now</a>
                             </div>
-                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                            <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/headphone.png" class="" alt="headphone">
                             </div>
                         </div>
                     </div>
                     <!-- single carousel item -->
                     <div class="carousel-item">
-                        <div class="card d-flex flex-row" style="background-color: #FEEAE9;">
-                            <div class="card-body ps-5" style="margin-top: 10%;">
+                        <div class="row" style="background-color: #FEEAE9;">
+                            <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">X-Box for your living room</h1>
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
                                     time in front of tv.</p>
@@ -96,7 +96,7 @@
                                     class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
                                     Now</a>
                             </div>
-                            <div class="card-thumbnail pt-3 pb-4 pe-5">
+                            <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/xbox.png" class="" alt="xbox">
                             </div>
                         </div>
