--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row" style="background-color: #FEEAE9;">
+                        <div class="row d-flex align-items-center" style="background-color: #FEEAE9;">
                             <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">Mega LCD TV For Sports
                                 </h1>
@@ -68,7 +68,7 @@
                     </div>
                     <!-- single carousel item -->
                     <div class="carousel-item">
-                        <div class="row" style="background-color: #FEEAE9;">
+                        <div class="row d-flex align-items-center" style="background-color: #FEEAE9;">
                             <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">Cool Dude Headphone
                                 </h1>
@@ -86,7 +86,7 @@
                     </div>
                     <!-- single carousel item -->
                     <div class="carousel-item">
-                        <div class="row" style="background-color: #FEEAE9;">
+                        <div class="row d-flex align-items-center" style="background-color: #FEEAE9;">
                             <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">X-Box for your living room</h1>
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
@@ -123,7 +123,83 @@
     <!-- header end -->
 
     <main>
+        <!-- category start -->
+        <section class="container px-0">
+            <div class="row g-4">
+                <div class="col-lg-4">
+                    <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-warning rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="watch" width="100">
+                    </div>
+                </div>
+                <!-- single category columns -->
+                <div class="col-lg-4">
+                    <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-success rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="bag" width="100">
+                    </div>
+                </div>
+                <!-- single category columns -->
+                <div class="col-lg-4">
+                    <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-primary rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="shoes" width="100">
+                    </div>
+                </div>
+                <!-- single category columns -->
+            </div>
+        </section>
+        <!-- category end -->
 
+        <!-- shoes start -->
+        <section style="margin: 100px auto;" class="container px-0">
+            <h3 class="text-dark">Shoes</h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="shoe-1">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h5 class="card-title">$120</h5>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single shoes columns -->
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="shoe-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h5 class="card-title">$320</h5>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single shoes columns -->
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="shoe-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional.</p>
+                            <h5 class="card-title">$350</h5>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single shoes columns -->
+            </div>
+        </section>
+        <!-- shoes end -->
     </main>
     <footer></footer>
 
