--- a/index.html
+++ b/index.html
@@ -200,6 +200,59 @@
             </div>
         </section>
         <!-- shoes end -->
+
+        <!-- bags start -->
+        <section style="margin: 100px auto;" class="container px-0">
+            <h3 class="text-dark">Backpack</h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white" style="min-height: 615px;">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="bag-1">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h5 class="card-title">$120</h5>
+                            <p class="card-text mb-5">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single bags columns -->
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white" style="min-height: 615px;">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="bag-2">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h5 class="card-title">$320</h5>
+                            <p class="card-text mb-5">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single bags columns -->
+                <div class="col-lg-4">
+                    <div class="card shadow border-0 bg-white" style="min-height: 615px;">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="bag-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h5 class="card-title">$169</h5>
+                            <p class="card-text mb-5">This is a wider card with supporting text below as a natural
+                                lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
+                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- single bags columns -->
+            </div>
+        </section>
+        <!-- bags end -->
     </main>
     <footer></footer>
 
