--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header start -->
     <header>
         <!-- nav start -->
-        <nav class="navbar navbar-expand-lg navbar-light m-0 p-0">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light m-0 p-0">
             <div style="background-color: #F8F9FA;" class="container py-2">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="logo" width="159" height="28">
@@ -31,10 +31,10 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Product</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
@@ -152,7 +152,7 @@
         <!-- category end -->
 
         <!-- shoes start -->
-        <section style="margin: 100px auto;" class="container px-0">
+        <section id="shoes" style="margin: 100px auto;" class="container px-0">
             <h3 class="text-dark">Shoes</h3>
             <div class="row">
                 <div class="col-lg-4">
@@ -202,7 +202,7 @@
         <!-- shoes end -->
 
         <!-- bags start -->
-        <section style="margin: 100px auto;" class="container px-0">
+        <section id="backpack" style="margin: 100px auto;" class="container px-0">
             <h3 class="text-dark">Backpack</h3>
             <div class="row">
                 <div class="col-lg-4">
@@ -253,8 +253,29 @@
             </div>
         </section>
         <!-- bags end -->
+
+        <!-- subscribe start -->
+        <section class="container d-flex justify-content-center align-items-center py-5 mb-5 rounded-3"
+            style="background-color: #FEEAE9;">
+            <div class="subscribe">
+                <h3>LET'S STAY IN TOUCH</h3>
+                <p class="text-secondary mb-1">Get updates on sales, specials and more</p>
+                <input class="w-100 border-0 ps-2 rounded-3" style="height: 35px;" type="email" name="email" id=""
+                    placeholder="Enter Your Email">
+                <br>
+                <button class="btn text-white rounded-3 bg-gradient py-1 px-3"
+                    style="background-color: #FF1D75;">SUBMIT</button>
+            </div>
+        </section>
+        <!-- subscribe end -->
     </main>
-    <footer></footer>
+
+    <!-- footer start -->
+    <footer>
+        <p class="text-dark text-center"><small>&copy;2022. Panda Commerce. All rights reserved. Sofia,
+                Bulgaria.</small></p>
+    </footer>
+    <!-- footer end -->
 
 
 
