--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -255,7 +255,7 @@
         <!-- bags end -->
 
         <!-- subscribe start -->
-        <section class="container d-flex justify-content-center align-items-center py-5 mb-5 rounded-3"
+        <section id="subscribe" class="container d-flex justify-content-center align-items-center py-5 mb-5 rounded-3"
             style="background-color: #FEEAE9;">
             <div class="subscribe">
                 <h3>LET'S STAY IN TOUCH</h3>
