--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <input class="w-100 border-0 ps-2 rounded-3" style="height: 35px;" type="email" name="email" id=""
                     placeholder="Enter Your Email">
                 <br>
-                <button class="btn text-white rounded-3 bg-gradient py-1 px-3"
+                <button class="btn text-white rounded-3 bg-gradient py-1 px-3 mt-2"
                     style="background-color: #FF1D75;">SUBMIT</button>
             </div>
         </section>
