--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     <header>
         <!-- nav start -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-light m-0 p-0">
-            <div style="background-color: #F8F9FA;" class="container py-2">
+            <div class="container py-2 panda-bg-athens-gray">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="logo" width="159" height="28">
                 </a>
@@ -50,7 +52,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row d-flex align-items-center" style="background-color: #FEEAE9;">
+                        <div class="row d-flex align-items-center panda-bg-bridesmaid">
                             <div class="col-lg-7 ps-5 order-sm-2 order-lg-1 order-2" style="margin-top: 10%;">
                                 <h1 class="card-title">Mega LCD TV For Sports
                                 </h1>
@@ -163,8 +165,8 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$120</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                                &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -177,8 +179,8 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$320</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                                &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -191,8 +193,8 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$350</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                                &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -214,8 +216,8 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
+                                Now &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -229,8 +231,8 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
+                                Now &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -244,8 +246,8 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3"
-                                style="background-color: #FF1D75;">Buy Now &gt;&gt;</a>
+                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
+                                Now &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -263,8 +265,7 @@
                 <input class="w-100 border-0 ps-2 rounded-3" style="height: 35px;" type="email" name="email" id=""
                     placeholder="Enter Your Email">
                 <br>
-                <button class="btn text-white rounded-3 bg-gradient py-1 px-3 mt-2"
-                    style="background-color: #FF1D75;">SUBMIT</button>
+                <button class="btn text-white panda-bg-rose rounded-3 bg-gradient py-1 px-3 mt-2">SUBMIT</button>
             </div>
         </section>
         <!-- subscribe end -->
