--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
                                     time in front of tv.</p>
                                 <h2 style="color:#FF136F" class="fs-1">$1200</h2>
-                                <a href="#" style="background-color: #FF136F;"
-                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
-                                    Now</a>
+                                <a href="#" class="btn panda-bg-rose panda-btn py-2 px-4">Buy Now</a>
                             </div>
                             <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/tv.png" class="" alt="tv">
@@ -77,9 +75,7 @@
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
                                     time in front of tv.</p>
                                 <h2 style="color:#FF136F" class="fs-1">$400</h2>
-                                <a href="#" style="background-color: #FF136F;"
-                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
-                                    Now</a>
+                                <a href="#" class="btn panda-bg-rose panda-btn py-2 px-4">Buy Now</a>
                             </div>
                             <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/headphone.png" class="" alt="headphone">
@@ -94,9 +90,7 @@
                                 <p class="card-text">This is the best tv in the world for people who just want to waste
                                     time in front of tv.</p>
                                 <h2 style="color:#FF136F" class="fs-1">$600</h2>
-                                <a href="#" style="background-color: #FF136F;"
-                                    class="btn text-white rounded-3 bg-gradient py-2 px-4">Buy
-                                    Now</a>
+                                <a href="#" class="btn panda-bg-rose panda-btn py-2 px-4">Buy Now</a>
                             </div>
                             <div class="col-lg-5 order-sm-1 order-lg-2 order-1 card-thumbnail pt-3 pb-4 pe-5">
                                 <img width="400" src="images/banner-images/xbox.png" class="" alt="xbox">
@@ -126,26 +120,26 @@
 
     <main>
         <!-- category start -->
-        <section class="container px-0">
+        <section class="container px-0 categories">
             <div class="row g-4">
                 <div class="col-lg-4">
                     <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-warning rounded-3">
                         <h1 class="text-white">Watch</h1>
-                        <img src="images/categories/watch.png" alt="watch" width="100">
+                        <img src="images/categories/watch.png" alt="watch">
                     </div>
                 </div>
                 <!-- single category columns -->
                 <div class="col-lg-4">
                     <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-success rounded-3">
                         <h1 class="text-white">Bag</h1>
-                        <img src="images/categories/bag.png" alt="bag" width="100">
+                        <img src="images/categories/bag.png" alt="bag">
                     </div>
                 </div>
                 <!-- single category columns -->
                 <div class="col-lg-4">
                     <div class="py-3 px-4 d-flex align-items-center justify-content-between bg-primary rounded-3">
                         <h1 class="text-white">Shoes</h1>
-                        <img src="images/categories/shoes.png" alt="shoes" width="100">
+                        <img src="images/categories/shoes.png" alt="shoes">
                     </div>
                 </div>
                 <!-- single category columns -->
@@ -165,7 +159,7 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$120</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                            <a href="#" class="btn panda-btn py-2 px-4 panda-bg-rose">Buy Now
                                 &gt;&gt;</a>
                         </div>
                     </div>
@@ -179,7 +173,7 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$320</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                            <a href="#" class="btn panda-btn py-2 px-4 panda-bg-rose">Buy Now
                                 &gt;&gt;</a>
                         </div>
                     </div>
@@ -193,7 +187,7 @@
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in
                                 to additional.</p>
                             <h5 class="card-title">$350</h5>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 panda-bg-rose">Buy Now
+                            <a href="#" class="btn panda-btn py-2 px-4 panda-bg-rose">Buy Now
                                 &gt;&gt;</a>
                         </div>
                     </div>
@@ -216,7 +210,7 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
+                            <a href="#" class="btn panda-btn py-2 px-4 mt-3 panda-bg-rose">Buy
                                 Now &gt;&gt;</a>
                         </div>
                     </div>
@@ -231,8 +225,7 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
-                                Now &gt;&gt;</a>
+                            <a href="#" class="btn panda-btn py-2 px-4 mt-3 panda-bg-rose">Buy Now &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -246,8 +239,7 @@
                             <p class="card-text mb-5">This is a wider card with supporting text below as a natural
                                 lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn text-white rounded-3 bg-gradient py-2 px-4 mt-3 panda-bg-rose">Buy
-                                Now &gt;&gt;</a>
+                            <a href="#" class="btn panda-btn py-2 px-4 mt-3 panda-bg-rose">Buy Now &gt;&gt;</a>
                         </div>
                     </div>
                 </div>
@@ -265,7 +257,7 @@
                 <input class="w-100 border-0 ps-2 rounded-3" style="height: 35px;" type="email" name="email" id=""
                     placeholder="Enter Your Email">
                 <br>
-                <button class="btn text-white panda-bg-rose rounded-3 bg-gradient py-1 px-3 mt-2">SUBMIT</button>
+                <button class="btn panda-bg-rose panda-btn py-1 px-3 mt-2">SUBMIT</button>
             </div>
         </section>
         <!-- subscribe end -->
