--- a/index.html
+++ b/index.html
@@ -254,9 +254,8 @@
             <div class="subscribe">
                 <h3>LET'S STAY IN TOUCH</h3>
                 <p class="text-secondary mb-1">Get updates on sales, specials and more</p>
-                <input class="w-100 border-0 ps-2 rounded-3" style="height: 35px;" type="email" name="email" id=""
+                <input class="form-control" style="height: 35px;" type="email" name="email" id=""
                     placeholder="Enter Your Email">
-                <br>
                 <button class="btn panda-bg-rose panda-btn py-1 px-3 mt-2">SUBMIT</button>
             </div>
         </section>
